--- a/index.html
+++ b/index.html
@@ -1,10 +1,35 @@
-<!doctype html>
-<html>
-    <head>
-        <link rel="stylesheet" href="index.css">
-    </head>
-    <body>
-        <!-- Your HTML here -->
-        <script src="index.js" type="module"></script>
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./index.css" />
+    <script src="./index.js" type="module" defer></script>
+    <title>PollyGlot App</title>
+  </head>
+  <body>
+    <header class="header">
+      <img
+        class="header__image"
+        src="./assets/parrot.png"
+        alt="A colorful parrot"
+      />
+      <div class="header__text">
+        <h1 class="header__text--title">PollyGlot</h1>
+        <p class="header__text--subtitle">Perfect Translation Every Time</p>
+      </div>
+    </header>
+    <main>
+      <section class="translator">
+        <form id="translator-form">
+          <label for="input-text" class="translator__input"></label>
+          <textarea name="prompt" id="input-text"></textarea>
+          <label for="language-selection" class="translator__language"></label>
+          <fieldset>
+            <legend></legend>
+          </fieldset>
+        </form>
+      </section>
+    </main>
+  </body>
 </html>
